fix set stujff